[project]
name = "queue-times-mcp"
version = "0.1.0"
description = "MCP server for theme park wait times from queue-times.com"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0b1",
    "httpx",
]

[tool.poe.tasks]
serve = "fastmcp run server.py"
dev = "fastmcp dev server.py"
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy ."
check = ["lint", "typecheck"]
test = "pytest tests/ -v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled separately

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "poethepoet>=0.40.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
